welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:9: error: value =< is not a member of Int
    if (max2 =< nums(i) && max1 > nums(i)){
             ^